<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    style="@style/layout_no_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendarControls"
    style="@style/topBottomPadding"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/calendarControls"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/prevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:background="@drawable/calendar_left_arrow_selector" >
        </ImageButton>

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:background="@color/KebapWhite"
            android:gravity="center"
            android:text="@string/dummy_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/KebapLightGray" >

        </TextView>

        <ImageButton
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:background="@drawable/calendar_right_arrow_selector" >
        </ImageButton>
    </LinearLayout>
    
<ViewFlipper
    android:id="@+id/calendarFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/calendarControls" >
    
    <cz.zeleznakoule.kebap.shared.CalendarView
	    android:id="@+id/calendar1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
    
    <cz.zeleznakoule.kebap.shared.CalendarView
	    android:id="@+id/calendar2"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
    
    
</ViewFlipper>
</RelativeLayout>
